# projet-qualite-air

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
notebooks/: 01_collecte.ipynb  02_nettoyage.ipynb  03_descriptif.ipynb  04_modelisation.ipynb
src/: collect_irep.py  collect_lcsqa.py  collect_meteo.py  data_loader.py  data_preprocessing.py  download_datasets.py  features.py  models.py  spatial.py
