[project]
name = "projet-qualite-air"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.91",
    "cdsapi>=0.7.7",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "imbalanced-learn>=0.14.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "shapely>=2.1.2",
    "tqdm>=4.67.3",
    "xarray>=2026.4.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
